--- a/mod4_solution/index.html
+++ b/mod4_solution/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Assignment Solution for Module 4</title>
-    <script src="js/SpeakHello.js"></script>
+    <script src="js/speakhello.js"></script>
     <script src="js/SpeakGoodBye.js"></script>
     <script src="js/script.js"></script>
 </head>
